--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,18 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
+    "react-router": "^6.20.1",
+    "react-router-dom": "^6.20.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
